--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://hobigotchi.vercel.app/" />
-  <meta property="og:title" content="호비고치 (Hobigotchi)" />
+  <meta property="og:title" content="호비고치(ホビゴチ)" />
   <meta property="og:description" content="나만의 작은 제이홉 키우기🩵" />
-  <meta property="og:image" content="/assets/images/thumbnail.png" />
+  <meta property="og:image" content="https://hobigotchi.vercel.app/assets/images/thumbnail.png" />
 
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://hobigotchi.vercel.app/" />
-  <meta property="twitter:title" content="호비고치 (Hobigotchi)" />
+  <meta property="twitter:title" content="호비고치(ホビゴチ)" />
   <meta property="twitter:description" content="나만의 작은 제이홉 키우기🩵" />
   <meta property="twitter:image" content="https://hobigotchi.vercel.app/assets/images/thumbnail.png" />
 
