--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   
-  <title>호비고치 (Hobigotchi)</title>
+  <title>호비고치(ホビゴチ)</title>
   <meta name="description" content="나만의 작은 제이홉 키우기🩵" />
 
   <meta property="og:type" content="website" />
